src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>取引先種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                    <default>true</default>
                    <label>通常</label>
                </value>
                <value>
                    <fullName>旅行会社</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgtSaleRate__c</fullName>
        <inlineHelpText>ネットエージェントのサビース利用する場合、サビース料金計算用レート</inlineHelpText>
        <label>エージェント販売手数料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AliasName__c</fullName>
        <label>取引先別名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountNo__c</fullName>
        <label>口座番号</label>
        <length>7</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankBranchNameKana__c</fullName>
        <inlineHelpText>半角カタカナを入力してください</inlineHelpText>
        <label>支店名(カナ）</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankBranchName__c</fullName>
        <label>支店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankBranchNumber__c</fullName>
        <label>支店番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankNameKana__c</fullName>
        <inlineHelpText>半角カタカナを入力してください</inlineHelpText>
        <label>金融機関名（カナ）</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>金融機関名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankNumber__c</fullName>
        <label>金融機関番号</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelChargeCalFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ご予約キャンセル料が発生する場合、該当キャンセル料金に対して、販売手数料を自動計算する・しないフラグ
TRUE:キャンセル料の販売手数料を計算しない
FALSE:キャンセル料の販売手数料を計算する（デフォルト値）</inlineHelpText>
        <label>キャンセル料の手数料フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CardSalesRate__c</fullName>
        <inlineHelpText>会計支払はカードで支払する場合、該当カードの手数料計算用レート</inlineHelpText>
        <label>カード手数料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChargeCalDateLst__c</fullName>
        <inlineHelpText>手数料集計単位は月単位の場合、前月の該当日の翌日から今月の該当日まで利用金額の合計して、手数料計算を行う</inlineHelpText>
        <label>手数料集計日</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChargeCalKbnLst__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargeCalKbnLst__c</fullName>
        <inlineHelpText>手数料集計単位：
会計単位：毎日会計単位の手数料を計算して、手数料情報は仕入データへ反映する
月単位：項目「手数料集計日」定義日付まで一ヶ月間利用金額から手数料計算して、手数料情報は仕入データへ反映する</inlineHelpText>
        <label>手数料集計単位</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>月単位</fullName>
                </value>
                <value>
                    <fullName>会計単位</fullName>
                    <default>true</default>
                    <label>会計単位</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <label>契約状態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有効</fullName>
                </value>
                <value>
                    <fullName>無効</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DepositsType__c</fullName>
        <label>預金種目</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>当座</fullName>
                </value>
                <value>
                    <fullName>貯蓄</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayChargeFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>手数料支払</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegisteredHolderKana__c</fullName>
        <label>名義人(カナ）</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>RoundType__c</fullName>
        <label>端数処理区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>切り捨て</fullName>
                </value>
                <value>
                    <fullName>四捨五入</fullName>
                </value>
                <value>
                    <fullName>切り上げ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOfficeCodeEmail__c</fullName>
        <inlineHelpText>メール取り込み機能、旅行会社→営業所情報識別コード</inlineHelpText>
        <label>旅行会社営業所コード_EMAIL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCodeJR__c</fullName>
        <label>旅行会社営業所コード_JR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCodeTA__c</fullName>
        <label>旅行会社営業所コード_TA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCodeTL__c</fullName>
        <label>旅行会社営業所コード_TL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCodeTR__c</fullName>
        <label>旅行会社営業所コード_TR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCode__c</fullName>
        <label>旅行会社営業所コード</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeEmail__c</fullName>
        <inlineHelpText>メール取り込み機能旅行会社識別コード</inlineHelpText>
        <label>旅行会社コード_EMAIL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeJRAPI__c</fullName>
        <label>旅行会社コードAPI_JR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeJR__c</fullName>
        <label>旅行会社コード_JR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeTAAPI__c</fullName>
        <label>旅行会社コードAPI_TA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeTA__c</fullName>
        <label>旅行会社コード_TA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeTLAPI__c</fullName>
        <label>旅行会社コードAPI_TL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeTL__c</fullName>
        <label>旅行会社コード_TL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeTRAPI__c</fullName>
        <label>旅行会社コードAPI_TR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCodeTR__c</fullName>
        <label>旅行会社コード_TR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCode__c</fullName>
        <label>旅行会社コード</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyType__c</fullName>
        <label>旅行会社分類</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>リアル</fullName>
                </value>
                <value>
                    <fullName>ネット</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransferChargeKbn__c</fullName>
        <inlineHelpText>振込には所定の手数料がかかります
ご依頼人さま：振込金額と手数料をご指定の出金口座から引き落とします。
お受取人さま：振込金額から手数料を除いた金額がお受取人さまに入金されます。</inlineHelpText>
        <label>振込手数料負担先</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>先方負担</fullName>
                </value>
                <value>
                    <fullName>自社負担</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>